Fix:Hero section resizing on mobile

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -6,6 +6,10 @@
   background: black;
   color: white;
   z-index: 3;
+   @supports (height: 100dvh) {
+    min-height: 100dvh;
+  }
+  overscroll-behavior: none;
 }
 
 .slides {
