--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -17,7 +17,7 @@
   top:0; left:0;
   bottom:0; right:0;
   
-  background: #0b0b0b;
+  background: #111;
   color: #ededed;
   padding:0;
   display: flex;
