--- a/components/Roster/Roster.module.css
+++ b/components/Roster/Roster.module.css
@@ -69,10 +69,11 @@
   pointer-events: none;
 }
 .scrim {
+  
   position: absolute;
   inset: 0;
-  background: linear-gradient(to top, rgba(0,0,0,.4), rgba(0,0,0,.05));
-  opacity: 0.1;
+  background: linear-gradient(to top, rgba(0,0,0,0.2), rgba(0,0,0,0.4));
+  opacity: .2;
   transition: opacity .6s ease;
   pointer-events: none;
 }
@@ -170,6 +171,14 @@
   .gridItem {
     margin-bottom: 1rem; /* a touch more breathing room */
   }
+
+  .scrim {
+  background: linear-gradient(to top, rgba(0,0,0,.1), rgba(0,0,0,.05));
+  
+  opacity: 0.2;
+  
+}
+
 }
 
 @media (min-width: 900px) {
